--- a/menu.html
+++ b/menu.html
@@ -47,21 +47,21 @@
                     <img src="image/search-white_icon.svg" />
                 </div>
                 <ul class="d-none d-lg-block">
-                    <li><a href="/">Trang chủ</a></li>
-                    <li><a href="/intro.html">Giới thiệu</a></li>
-                    <li><a class="active" href="/menu.html">Thực đơn</a></li>
-                    <li><a href="/order.html">Đặt bàn</a></li>
-                    <li><a href="/news.html">Tin nổi bật</a></li>
-                    <li><a   href="/contact.html">Liên hệ</a></li>
+                    <li><a href="">Trang chủ</a></li>
+                    <li><a href="intro.html">Giới thiệu</a></li>
+                    <li><a class="active" href="menu.html">Thực đơn</a></li>
+                    <li><a href="order.html">Đặt bàn</a></li>
+                    <li><a href="news.html">Tin nổi bật</a></li>
+                    <li><a   href="contact.html">Liên hệ</a></li>
                 </ul>
 
                 <ul class="collapse" id="collapseExample">
-                    <li><a href="/">Trang chủ</a></li>
-                    <li><a href="/intro.html">Giới thiệu</a></li>
-                    <li><a class="active" href="/menu.html">Thực đơn</a></li>
-                    <li><a href="/order.html">Đặt bàn</a></li>
-                    <li><a href="/news.html">Tin nổi bật</a></li>
-                    <li><a  href="/contact.html">Liên hệ</a></li>
+                    <li><a href="">Trang chủ</a></li>
+                    <li><a href="intro.html">Giới thiệu</a></li>
+                    <li><a class="active" href="menu.html">Thực đơn</a></li>
+                    <li><a href="order.html">Đặt bàn</a></li>
+                    <li><a href="news.html">Tin nổi bật</a></li>
+                    <li><a  href="contact.html">Liên hệ</a></li>
                     <li><a href="tel:0904 999 222 ">0904 999 222 </a></li>
                     <li><a href="tel:024 37 345 678 ">024 37 345 678</a></li>
                     <li><a href="tel: 024 38 789 789 "> 024 38 789 789 </a></li>
@@ -187,9 +187,9 @@
 
                         </div>
                         <div class="paging text-center">
-                            <a class="active" href="/menu.html">1</a>
-                            <a href="/menu.html">2</a>
-                            <a href="/menu.html">3</a>
+                            <a class="active" href="menu.html">1</a>
+                            <a href="menu.html">2</a>
+                            <a href="menu.html">3</a>
                         </div>
                     </div>
                     <div class="col-md-3 side-bar">
@@ -199,11 +199,11 @@
                         </div>
                         <h4 class="headline">danh mục</h4>
                         <ul class="categories">
-                            <li><a href="/menu.html" >Món Đặc sản</a></li>
-                            <li><a href="/menu.html" class="active">Món Khai vị</a></li>
-                            <li><a href="/menu.html" >Món Chính</a></li>
-                            <li><a href="/menu.html" >Món Tráng miệng</a></li>
-                            <li><a href="/menu.html" >Thức uống</a></li>
+                            <li><a href="menu.html" >Món Đặc sản</a></li>
+                            <li><a href="menu.html" class="active">Món Khai vị</a></li>
+                            <li><a href="menu.html" >Món Chính</a></li>
+                            <li><a href="menu.html" >Món Tráng miệng</a></li>
+                            <li><a href="menu.html" >Thức uống</a></li>
                         </ul>
                     </div>
                 </div>
