--- a/news-detail.html
+++ b/news-detail.html
@@ -47,21 +47,21 @@
                     <img src="image/search-white_icon.svg" />
                 </div>
                 <ul class="d-none d-lg-block">
-                    <li><a href="/">Trang chủ</a></li>
-                    <li><a href="/intro.html">Giới thiệu</a></li>
-                    <li><a href="/menu.html">Thực đơn</a></li>
-                    <li><a href="/order.html">Đặt bàn</a></li>
-                    <li><a class="active" href="/news.html">Tin nổi bật</a></li>
-                    <li><a   href="/contact.html">Liên hệ</a></li>
+                    <li><a href="">Trang chủ</a></li>
+                    <li><a href="intro.html">Giới thiệu</a></li>
+                    <li><a href="menu.html">Thực đơn</a></li>
+                    <li><a href="order.html">Đặt bàn</a></li>
+                    <li><a class="active" href="news.html">Tin nổi bật</a></li>
+                    <li><a   href="contact.html">Liên hệ</a></li>
                 </ul>
 
                 <ul class="collapse" id="collapseExample">
-                    <li><a href="/">Trang chủ</a></li>
-                    <li><a href="/intro.html">Giới thiệu</a></li>
-                    <li><a href="/menu.html">Thực đơn</a></li>
-                    <li><a href="/order.html">Đặt bàn</a></li>
-                    <li><a class="active"  href="/news.html">Tin nổi bật</a></li>
-                    <li><a href="/contact.html">Liên hệ</a></li>
+                    <li><a href="">Trang chủ</a></li>
+                    <li><a href="intro.html">Giới thiệu</a></li>
+                    <li><a href="menu.html">Thực đơn</a></li>
+                    <li><a href="order.html">Đặt bàn</a></li>
+                    <li><a class="active"  href="news.html">Tin nổi bật</a></li>
+                    <li><a href="contact.html">Liên hệ</a></li>
                     <li><a href="tel:0904 999 222 ">0904 999 222 </a></li>
                     <li><a href="tel:024 37 345 678 ">024 37 345 678</a></li>
                     <li><a href="tel: 024 38 789 789 "> 024 38 789 789 </a></li>
@@ -116,27 +116,27 @@
                         </div>
                         <h4 class="headline">danh mục</h4>
                         <ul class="categories">
-                            <li><a href="/news.html">Chương trình khuyến mãi</a></li>
-                            <li><a href="/news.html" class="active">Chương trình ca nhạc</a></li>
+                            <li><a href="news.html">Chương trình khuyến mãi</a></li>
+                            <li><a href="news.html" class="active">Chương trình ca nhạc</a></li>
                         </ul>
                         <h4 class="headline">tin nổi bật</h4>
                         <ul class="hot-news">
                             <li>
-                                <a href="/news-detail.html">
+                                <a href="news-detail.html">
                                     <img src="image/product-sample.jpg" />
                                     Chương trình khuyến mãi tháng 8
                                 </a>
                             </li>
 
                             <li>
-                                <a href="/news-detail.html">
+                                <a href="news-detail.html">
                                     <img src="image/product-sample.jpg" />
                                     Chương trình khuyến mãi tháng 8
                                 </a>
                             </li>
 
                             <li>
-                                <a href="/news-detail.html">
+                                <a href="news-detail.html">
                                     <img src="image/product-sample.jpg" />
                                     Chương trình khuyến mãi tháng 8
                                 </a>
