--- a/intro.html
+++ b/intro.html
@@ -19,7 +19,7 @@
                     <img src="image/logo.png" />
                 </div>
                 <div class=" logo-name">
-                    <h1>NHÀ HÀNG KIẾN MINH</h1>
+                    <h1>NHÀ HÀNG <br class="d-block d-md-none" /> KIẾN MINH</h1>
                 </div>
                 <div class="">
                     <div class="contact d-flex align-items-center">
