--- a/news.html
+++ b/news.html
@@ -19,7 +19,7 @@
                     <img src="image/logo.png" />
                 </div>
                 <div class=" logo-name">
-                    <h1>NHÀ HÀNG KIẾN MINH</h1>
+                    <h1>NHÀ HÀNG <br class="d-block d-md-none" /> KIẾN MINH</h1>
                 </div>
                 <div class="">
                     <div class="contact d-flex align-items-center">
@@ -77,7 +77,7 @@
         <div class="news-page">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-9">
+                    <div class="col-md-9 order-2">
                         <div class="news-list">
                             <div class="news-item">
                                 <img src="image/product-sample.jpg" />
@@ -155,7 +155,7 @@
                             <a href="news.html">3</a>
                         </div>
                     </div>
-                    <div class="col-md-3 side-bar">
+                    <div class="col-md-3 order-1 side-bar">
                         <div class="search-input">
                             <input placeholder="Tìm..." class="form-control" />
                             <img src="image/search_icon.svg" />
